# neuroscholar

./: .env_example  .gitignore  README.md  docker-compose.yml  example_config.yaml  pyproject.toml  requirements.txt
src/: Dockerfile  Dockerfile.bot  Dockerfile.dff  run.py  test.py
src/database/: build_qdrant.py  papers.csv
src/dialog_graph/: conditions.py  responses.py  script.py
src/docker/: requirements.txt
src/pipeline_services/: pre_services.py
src/qa/: nlu.py  rag.py
