[tool.poetry]
name = "scholar-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dff = {extras = ["json", "pickle", "stats", "telegram"], version = "^0.7.0"}
sentry-sdk = "^2.0.1"
sentence-transformers = "^2.7.0"
pytest = "^8.2.0"
pandas = "^2.2.2"
langchain = "^0.1.17"
qdrant-client = "^1.9.0"
langchain-community = "^0.0.36"
langchain-cohere = "^0.1.4"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
